<resources>
    <string name="app_name">Ministocks</string>
    <string name="prefs_name">nitezh.ministock_preferences</string>
    <string-array name="background_entries">
        <item>Solid</item>
        <item>Transparent</item>
        <item>None</item>
    </string-array>
    <string-array name="background_entryvalues">
        <item>solid</item>
        <item>transparent</item>
        <item>none</item>
    </string-array>
    <string-array name="updated_colour_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="updated_colour_entryvalues">
        <item>light</item>
        <item>dark</item>
        <item>yellow</item>
    </string-array>
    <string-array name="updated_display_entries">
        <item>Visible</item>
        <item>Invisible</item>
        <item>Remove</item>
    </string-array>
    <string-array name="updated_display_entryvalues">
        <item>visible</item>
        <item>invisible</item>
        <item>remove</item>
    </string-array>
    <string-array name="colour_entries">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Cyan</item>
        <item>Gray</item>

    </string-array>
    <string-array name="colour_values">
        <item>black</item>
        <item>white</item>
        <item>red</item>
        <item>green</item>
        <item>yellow</item>
        <item>cyan</item>
        <item>gray</item>

    </string-array>
    <string-array name="text_style_entries">
        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold_Italic</item>
    </string-array>
    <string-array name="text_style_entryvalues">
        <item>normal</item>
        <item>bold</item>
        <item>italic</item>
        <item>bold_italic</item>
    </string-array>
    <string-array name="update_interval_entries">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>One hour</item>
        <item>Three hours</item>
        <item>Daily</item>
    </string-array>
    <string-array name="update_interval_entryvalues">
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>86400000</item>
    </string-array>
    <string name="_1x4_widget_background">1x4 widget background</string>
    <string name="_1x4_landscape_widget_background">1x4 landscape widget background</string>
    <string name="_1x4_large_widget_background">1x4 large widget background</string>
    <string name="_1x4_large_landscape_widget_background">1x4 large landscape widget background</string>
    <string name="_2x2_widget_background">2x2 widget background</string>
    <string name="_1x2_large_landscape_widget_background">1x2 large landscape widget background</string>
    <string name="_2x4_large_widget_background">2x4 large widget background</string>
    <string name="_2x4_widget_background">2x4 widget background</string>
    <string name="_2x2_large_widget_background">2x2 large widget background</string>
    <string name="_1x2_landscape_widget_background">1x2 landscape widget background</string>
    <string name="portfolio_item_date_label">Date (yyyy-mm-dd)</string>
    <string name="portfolio_item_date_hint">optional</string>
    <string name="portfolio_item_quantity_label">Quantity</string>
    <string name="portfolio_item_quantity_hint">optional</string>
    <string name="portfolio_item_limit_info">When the limits are triggered the stock price will change colour in the widget.</string>
    <string name="portfolio_item_limit_high_label">High price limit</string>
    <string name="portfolio_item_limit_high_hint">optional</string>
    <string name="portfolio_item_limit_low_label">Low price limit</string>
    <string name="portfolio_item_limit_low_hint">optional</string>
    <string name="portfolio_item_custom_text_info">You may specify custom text to appear instead of the standard description.</string>
    <string name="portfolio_item_custom_text_label">Custom display text</string>
    <string name="portfolio_item_custom_text_hint">optional</string>
    <string name="portfolio_item_save_ok">OK</string>
    <string name="portfolio_item_save_cancel">Cancel</string>
    <string name="portfolio_item_price_label">Price (required)</string>
    <string name="portfolio_list_item_name_label">No description</string>
    <string name="portfolio_list_item_date_label">Buy date:</string>
    <string name="portfolio_list_item_quantity_label">Quantity:</string>
    <string name="portfolio_list_item_current_price_label">Price:</string>
    <string name="portfolio_list_item_limit_high_label">High alert:</string>
    <string name="portfolio_list_item_limit_low_label">Low alert:</string>
    <string name="portfolio_list_item_last_change_label">Last ch:</string>
    <string name="portfolio_list_item_total_change_label">Total:</string>
    <string name="portfolio_list_item_holding_value_label">Holding:</string>
    <string name="portfolio_list_item_buy_price_label">Buy price:</string>
    <string name="widget_loading_text">loading data…</string>
    <string name="appwidget_text">Resizable</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string">Empty View</string>
    <string name="menu_label">Add Stock to the Widget</string>
    <string name="search_hint">Search for a Stock</string>
    <string name="fire">Fire</string>
    <string name="sky">Sky</string>
    <string name="recent_changes">Recent changes</string>
    <string name="license">License</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="attributions">Attributions</string>
    <string name="recent_changes_contents">Build 73\nMultiple bug fixes:\n\nAllow comma when entering numbers</string>
    <string name="license_contents">The MIT License (MIT)<br/><br/>Copyright © 2013 Nitesh Patel<br/><br />Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br /><br />The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br/><br/>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="terms_of_service_contents">See https://iextrading.com/api-exhibit-a</string>
    <string name="attributions_contents">Data provided for free by IEX (https://iextrading.com/developer).</string>
    <string name="entering_stocks">Entering Stocks</string>
    <string name="selecting_widget_views">Selecting Widget Views</string>
    <string name="using_the_portfolio">Using The Portfolio</string>
    <string name="updating_prices">Updating Prices</string>
    <string name="online_help">Online Help</string>
    <string name="online_faqs">Online FAQs</string>
    <string name="support">Support</string>
</resources>