<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nitezh.ministock.activities.menu.MenuScrollableAppearance"
    android:id="@+id/relative">

    <Button
        android:id="@+id/entering_stocks"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/entering_stocks" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/entering_stocks"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />


    <Button
        android:id="@+id/selecting_widget_views"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/entering_stocks"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/selecting_widget_views" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/selecting_widget_views"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/using_the_portfolio"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/selecting_widget_views"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/using_the_portfolio" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/using_the_portfolio"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/updating_prices"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/using_the_portfolio"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/updating_prices" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/updating_prices"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/online_help"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/updating_prices"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/online_help" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/online_help"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/online_faqs"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/online_help"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/online_faqs" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/online_faqs"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/support"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/online_faqs"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/support" />



</RelativeLayout>
