<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nitezh.ministock.activities.menu.MenuScrollableAppearance"
    android:id="@+id/relative">

    <Button
        android:id="@+id/recent_changes"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/recent_changes" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recent_changes"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />


    <Button
        android:id="@+id/license"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recent_changes"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/license" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/license"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/terms_of_service"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/license"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/terms_of_service" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/terms_of_service"
        android:gravity="center"
        android:text="------------------------------------------------------------------------------------"
        android:textAppearance="@android:style/TextAppearance"
        android:visibility="visible" />

    <Button
        android:id="@+id/attributions"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/terms_of_service"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/attributions" />

</RelativeLayout>
